# libenercast

./: CMakeLists.txt  Doxyfile  README.md
.github/workflows/: action.yml
Test/: CMakeLists.txt  test1.cpp
include/: calculator.h  chargeController.h  epever.h  salutator.h  tristar.h
src/: CMakeLists.txt  calculator.cpp  epever.cpp  salutator.cpp  tristar.cpp
test/: CMakeLists.txt  main.cpp  testEpever.cpp  testTriStar.cpp
